Fix: update selector to fix vertical stretch bug

--- a/src/components/experience/styles.scss
+++ b/src/components/experience/styles.scss
@@ -24,7 +24,7 @@
         }
         .mobile-experience {
 
-            .img {
+            img {
                 max-width: 100%;
                 align-self: flex-start;
             }
